# P4

./: README.md
lists/final/: class.test  verif.test
scripts/: meson.build  run_spkid.sh  wav2delta.sh  wav2delta_.sh  wav2lpcc.sh  wav2mfcc.sh
src/: meson.build
src/fmatrix/: fmatrix_cut_row.cpp  fmatrix_delta.cpp  fmatrix_delta_dynamic_1.cpp  fmatrix_delta_dynamic_2.cpp  fmatrix_delta_static.cpp
src/gmm/: gmm_classify.cpp  gmm_train.cpp  gmm_verify.cpp
src/pav/: gmm.cpp
